docs: adicionar documentação completa de testes RNF01
Atualização abrangente da documentação de testes com a nova seção RNF01 (Alta Escalabilidade - 5.000 trades por segundo), incluindo estratégia, critérios e resultados.

COMPREHENSIVE_TESTING.md:

- +Seção 40: RNF01 — Validação de Alta Escalabilidade

- Visão geral: estratégia de projeção horizontal baseada em throughput por instância

- Estrutura dos testes: 3 camadas (Integração, E2E, Gatling)

- Testes de Integração com Virtual Threads, CountDownLatch, AtomicInteger

- Testes E2E com pipeline completo + data seeding

- Simulação Gatling com load injection + assertions

- Execução documentada: Docker Compose, AWS a1.medium, Maven

- Critérios de aceite: tabela com 12 métricas e thresholds

- Artefatos gerados: 12 arquivos novos ou atualizados

PERFORMANCE_REPORT.md:

- +Seção 9: RNF01 — Validação de Alta Escalabilidade

- Visão geral + estratégia de validação (4 etapas)

- Camadas de teste: descrição detalhada

- Output examples: boxes formatados com ASCII art

- Projeção de capacidade: 50-100 instâncias para 5.000 TPS

- Conclusão: RNF01 viável com Kubernetes HPA

- Renumeração: Conclusão passa de seção 9 para 10